# matrix_inverse

./: Cargo.toml  in.json  out.json
src/: main.rs  matrix.rs  numeric.rs
