[package]
name = "matrix_inverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
miette = { version = "5.5.0", features = ["fancy"] }
nalgebra = "0.32.1"
serde_json = "1.0.93"
thiserror = "1.0.38"
